--- a/reprobus-user.conf
+++ b/reprobus-user.conf
@@ -4,6 +4,6 @@ WDIR="/home/resos/REPROBUS/REPROBUS/WORK"
 DATA_DIR="/home/resos/REPROBUS/REPROBUS/DATA/ECMWF"
 RESTART_DIR="/home/resos/REPROBUS/REPROBUS/DATA/RESTART"
 RES_DIR="/home/resos/REPROBUS/REPROBUS/RES"
-fdate=`date '+%Y%m%d' --date '2 days ago'`
-zdate=`date '+%Y%m%d' --date '1 days ago'`
+START_DATE="20230919"
+END_DATE="20230921"
 NSTART=1
