add images_dir param

--- a/reprobus-user.conf
+++ b/reprobus-user.conf
@@ -1,9 +1,10 @@
 EXP="001442"
 COMPILER="ifort"
-WDIR="/home/resos/REPROBUS/REPROBUS/WORK"
-DATA_DIR="/home/resos/REPROBUS/REPROBUS/DATA/ECMWF"
-RESTART_DIR="/home/resos/REPROBUS/REPROBUS/DATA/RESTART"
-RES_DIR="/home/resos/REPROBUS/REPROBUS/RES"
-START_DATE="20230919"
-END_DATE="20230921"
+WDIR="/sedoo/resos/reprobus/WORK"
+DATA_DIR="/sedoo/resos/reprobus/ECMWF"
+RESTART_DIR="/sedoo/resos/reprobus/RESTART"
+RES_DIR="/sedoo/resos/reprobus/RES"
+IMAGES_DIR="/sedoo/resos/reprobus/IMAGES"
+START_DATE="20230922"
+END_DATE="20230923"
 NSTART=1
